--- a/lesson-1/minimal-fastapi/Dockerfile
+++ b/lesson-1/minimal-fastapi/Dockerfile
@@ -9,4 +9,5 @@ RUN pip install --no-cache-dir --upgrade -r requirements.txt
 
 EXPOSE 8000
 
-ENTRYPOINT ["uvicorn", "src.main:app", "--host", "0.0.0.0", "--port", "8000"]
+ENTRYPOINT ["uvicorn"]
+CMD ["src.main:app", "--host", "0.0.0.0", "--port", "8000"]
