--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,8 @@ dependencies = [
     "uvicorn>=0.32.1",
     "pyarrow>=18.1.0",
     "scikit-learn>=1.5.2",
+    "ipykernel>=6.29.5",
+    "requests>=2.32.3",
 ]
 readme = "README.md"
 requires-python = ">= 3.10"
