--- a/lesson-1/minimal/Makefile
+++ b/lesson-1/minimal/Makefile
@@ -1,9 +1,9 @@
-PHONY: build run
+.PHONY: build run
 
 build:
 	@echo "building docker image"
 	docker build -t my-python-app:latest .
 
 run:
-	docker run --p 8000:8000 my-python-app:latest
+	docker run -p 8000:8000 my-python-app:latest
 	@echo "running on http://localhost:8000"
