--- a/.lefthook.yml
+++ b/.lefthook.yml
@@ -14,6 +14,6 @@ pre-commit:
       glob: '*.ipynb'
       run: rye run jupyter nbconvert --clear-output --inplace {staged_files}
       stage_fixed: true
-    mypy:
+    pyright:
       glob: '*.py'
-      run: mypy --pretty {staged_files} --ignore-missing-imports
+      run: pyright {staged_files}
