--- a/2-frontend/uv-example/Dockerfile
+++ b/2-frontend/uv-example/Dockerfile
@@ -1,6 +1,10 @@
 # Base image
 FROM python:3.12
 
+# this updates dependencies, installs curl and 
+# rm -rf /var removes files only necessary during installation
+RUN apt-get update && apt-get install -y curl && rm -rf /var/lib/apt/lists/*
+
 WORKDIR /app
 
 ADD --chmod=755 https://astral.sh/uv/install.sh /install.sh
