--- a/2-frontend/straattaal/pyproject.toml
+++ b/2-frontend/straattaal/pyproject.toml
@@ -20,7 +20,7 @@ scrape = [
     "beautifulsoup4>=4.12.3",
 ]
 frontend = [
-    "flask>=3.1.0",
+    "fastapi[standard]>=0.115.6",
 ]
 
 [build-system]
