--- a/3-testing/Dockerfile
+++ b/3-testing/Dockerfile
@@ -1,23 +1,12 @@
 # Install uv
-FROM python:3.12-slim
+FROM python:3.12-slim-bookworm
 COPY --from=ghcr.io/astral-sh/uv:latest /uv /uvx /bin/
-
-# Change the working directory to the `app` directory
-WORKDIR /app
-
-# Install dependencies
-RUN --mount=type=cache,target=/root/.cache/uv \
-    --mount=type=bind,source=uv.lock,target=uv.lock \
-    --mount=type=bind,source=pyproject.toml,target=pyproject.toml \
-    uv sync --frozen --no-install-project
 
 # Copy the project into the image
 ADD . /app
 
-# Sync the project
-RUN --mount=type=cache,target=/root/.cache/uv \
-    uv sync --frozen
-
-EXPOSE 8000
+# Sync the project into a new environment, using the frozen lockfile
+WORKDIR /app
+RUN uv sync --frozen
 
 CMD ["uv", "run", "calculator"]
