--- a/3-testing/pyproject.toml
+++ b/3-testing/pyproject.toml
@@ -14,6 +14,7 @@ dependencies = [
     "pytest-cov>=6.0.0",
     "pytest>=8.3.4",
     "requests>=2.32.3",
+    "psutil>=6.1.0",
 ]
 
 [project.scripts]
@@ -25,6 +26,9 @@ build-backend = "hatchling.build"
 
 [tool.hatch.build.targets.wheel]
 packages = ["src/calculator"]
+
+[tool.hatch.metadata]
+allow-direct-references = true
 
 [dependency-groups]
 dev = [
