--- a/3-testing/Dockerfile
+++ b/3-testing/Dockerfile
@@ -1,5 +1,7 @@
 # Install uv
 FROM python:3.12-slim-bookworm
+RUN apt-get update && apt-get install -y curl && rm -rf /var/lib/apt/lists/*
+
 COPY --from=ghcr.io/astral-sh/uv:latest /uv /uvx /bin/
 
 # Copy the project into the image
